--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Floating Timer App
+name: Build Signed Floating Timer
 
 on:
   push:
@@ -26,40 +26,76 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      # ওয়েব ফোল্ডার তৈরি এবং ফাইল কপি করা
+      # ওয়েব অ্যাসেট প্রস্তুত করা
       - name: Prepare Web Assets
         run: |
           mkdir -p www
           cp index.html www/
           cp overlay.html www/
-          echo "Web assets ready."
+          echo "Web assets copied."
 
       - name: Initialize Capacitor
         run: |
           npx cap add android
           npx cap sync
 
-      # 🔥 সবচেয়ে গুরুত্বপূর্ণ ধাপ: পারমিশন ইনজেকশন 🔥
-      - name: Inject Overlay Permissions
+      # পারমিশন ইনজেকশন
+      - name: Inject Permissions
         run: |
           MANIFEST="android/app/src/main/AndroidManifest.xml"
-          
-          # SYSTEM_ALERT_WINDOW পারমিশন যোগ করা (ভাসমান উইন্ডোর জন্য বাধ্যতামূলক)
           sed -i '/<manifest/a \    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />' $MANIFEST
           sed -i '/<manifest/a \    <uses-permission android:name="android.permission.ACTION_MANAGE_OVERLAY_PERMISSION" />' $MANIFEST
           sed -i '/<manifest/a \    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />' $MANIFEST
-          
-          echo "Permissions injected successfully."
         shell: bash
 
-      - name: Build Release APK
+      # 🔥 নতুন ধাপ: অটোমেটিক Keystore তৈরি এবং সাইনিং কনফিগ 🔥
+      - name: Configure Keystore & Signing
+        run: |
+          # ১. একটি টেম্পোরারি Keystore তৈরি করা
+          keytool -genkey -v \
+            -keystore android/app/release.keystore \
+            -alias androidreleasekey \
+            -keyalg RSA \
+            -keysize 2048 \
+            -validity 10000 \
+            -storetype JKS \
+            -dname "CN=TitanTimer, OU=Dev, O=Titan, L=Dhaka, S=Dhaka, C=BD" \
+            -storepass "password123" \
+            -keypass "password123"
+
+          # ২. build.gradle ফাইলে সাইনিং কনফিগ যুক্ত করা
+          GRADLE_FILE="android/app/build.gradle"
+          
+          cat >> $GRADLE_FILE <<EOF
+          android {
+              signingConfigs {
+                  release {
+                      storeFile file("release.keystore")
+                      storePassword "password123"
+                      keyAlias "androidreleasekey"
+                      keyPassword "password123"
+                  }
+              }
+              buildTypes {
+                  release {
+                      signingConfig signingConfigs.release
+                  }
+              }
+          }
+          EOF
+        shell: bash
+
+      # বিল্ড (এখন সাইন করা হবে)
+      - name: Build Signed Release APK
         run: |
           cd android
           chmod +x gradlew
           ./gradlew assembleRelease
 
-      - name: Upload APK
+      # APK আপলোড
+      - name: Upload Signed APK
         uses: actions/upload-artifact@v4
         with:
-          name: floating-timer-apk
-          path: android/app/build/outputs/apk/release/app-release-unsigned.apk
+          name: titan-timer-signed
+          path: android/app/build/outputs/apk/release/app-release.apk
+          
