--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "titan-floating-timer",
   "version": "1.0.0",
+  "description": "Always on Top Floating Timer",
+  "scripts": {
+    "build": "mkdir -p www && cp *.html www/ 2>/dev/null || :",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "@capacitor/android": "^5.0.0",
     "@capacitor/core": "^5.0.0",
